tests/ui/discord-frontend/entity_macro/unexpected_eof.stderr
error: unexpected end of input, expected identifier
  --> tests/ui/discord-frontend/entity_macro/unexpected_eof.rs:32:1
   |
LL | #[entity()]
   | ^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `entity` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

